--- a/package.json
+++ b/package.json
@@ -12,11 +12,16 @@
     "@types/node": "^16.7.13",
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
+    "bootstrap": "^5.3.2",
     "formik": "^2.4.5",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.9.1",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.18.0",
     "react-scripts": "5.0.1",
+    "react-select": "^5.8.0",
+    "react-toastify": "^9.1.3",
+    "toastify": "^2.0.1",
     "typescript": "^4.4.2",
     "usehooks-ts": "^2.9.1",
     "web-vitals": "^2.1.0",
